[gd_scene load_steps=6 format=3 uid="uid://clbsxema63k84"]

[ext_resource type="Texture2D" uid="uid://bcx2fy038kger" path="res://Sprites/UI/Player/Heart pixel.png" id="1_6wwk2"]
[ext_resource type="Script" path="res://Scenes/UI/Player/player_ui.gd" id="1_xyo0c"]
[ext_resource type="Texture2D" uid="uid://c7vw686bun17o" path="res://Sprites/Enemy/Orc-Walk.png" id="3_5r6xl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wlelb"]
bg_color = Color(0.281187, 0.281187, 0.281187, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p5avf"]
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Player_UI" type="CanvasLayer" groups=["PlayerUI"]]
process_mode = 3
script = ExtResource("1_xyo0c")

[node name="Life_Bar" type="ProgressBar" parent="."]
unique_name_in_owner = true
modulate = Color(0.731045, 0.38138, 0.498178, 1)
offset_left = 55.0
offset_top = 53.0
offset_right = 208.0
offset_bottom = 74.0
theme_override_styles/background = SubResource("StyleBoxFlat_wlelb")
theme_override_styles/fill = SubResource("StyleBoxFlat_p5avf")
max_value = 3.0
step = 1.0
value = 2.0
show_percentage = false

[node name="Heart" type="Sprite2D" parent="Life_Bar"]
modulate = Color(0, 0, 0, 1)
position = Vector2(-1, 8)
scale = Vector2(0.173228, 0.173228)
texture = ExtResource("1_6wwk2")

[node name="Heart2" type="Sprite2D" parent="Life_Bar"]
position = Vector2(-1, 7)
scale = Vector2(0.133858, 0.133858)
texture = ExtResource("1_6wwk2")

[node name="Enemy_Count" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 100.0
offset_top = 104.0
offset_right = 144.0
offset_bottom = 127.0
text = "0"

[node name="BG_Orc_Count" type="ColorRect" parent="Enemy_Count"]
z_index = -1
layout_mode = 0
offset_left = -50.0
offset_top = -1.0
offset_right = 54.0
offset_bottom = 25.0
color = Color(0.19, 0.19, 0.19, 0.654902)

[node name="Orc" type="TextureRect" parent="Enemy_Count"]
layout_mode = 0
offset_left = -176.0
offset_top = -118.0
offset_right = -108.0
offset_bottom = -48.0
scale = Vector2(2.52451, 2.60915)
texture = ExtResource("3_5r6xl")
expand_mode = 1
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="Music_Player" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
volume_db = -25.0
